tz-local/resource/elk/elk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-elasticsearch
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: es.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-master
            port:
              number: 9200
  - host: es.elk.eks_project.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-master
            port:
              number: 9200
  tls:
    - hosts:
        - es.eks_domain
        - es.elk.eks_project.eks_domain
      secretName: ingress-elasticsearch-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kibana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: kibana.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
  - host: kibana.elk.eks_project.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
  tls:
    - hosts:
        - kibana.eks_domain
        - kibana.elk.eks_project.eks_domain
      secretName: ingress-kibana-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-logstash
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
#  - host: logstash.eks_domain
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: logstash-logstash
#          servicePort: 5044
  - host: logstash.elk.eks_project.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logstash-logstash
            port:
              number: 5044
#  tls:
#    - hosts:
#        - logstash.eks_domain
#        - logstash.elk.eks_project.eks_domain
#      secretName: ingress-logstash-tls
